logs/Slang/generated/keywords/5.6.2--keyword_final.sv.log
name: keyword_final
description: The 'final' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_final.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_final.sv:8:8: error: expected declarator
    bit final;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_final.sv:8:14: error: expected statement
    bit final;
             ^
